chore: typo fix